fix(auth): Add necessary model field options

--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -8,6 +8,7 @@
     <title>Charity Platform</title>
 </head>
 <body>
+    {% include 'components/navbar.html' %}
     <h1>hello world from charity platform</h1>
 </body>
 </html>
