--- a/pages/templates/components/navbar.html
+++ b/pages/templates/components/navbar.html
@@ -2,5 +2,6 @@
     <div class="cont" style="display: flex; gap: 20px; font-size: 30px">
         <div class="nav-item"><a href="{% url "login" %}">Login</a></div>
         <div class="nav-item"><a href="{% url "signup" %}">Signup</a></div>
+        <div class="nav-item"><a href="{% url "create_announcement"%}">Create announcement</a></div>
     </div>
 </nav>
