--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -7,12 +7,12 @@
 	<link rel="stylesheet" href="{% static 'css/style.css' %}">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
 		  integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-	<title>Charity Platform</title>
+	<title>{% block title %}Charity Platform{% endblock %}</title>
 </head>
 <body>
 	<div class="container">
 		{% include 'components/navbar.html' %}
-		<h1>hello world from charity platform</h1>
+		{% block container %}<h1>hello world from charity platform</h1>{% endblock %}
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
