--- a/fundraisers/templates/fundraisers/announcements.html
+++ b/fundraisers/templates/fundraisers/announcements.html
@@ -19,5 +19,81 @@
             </div>
             {% endfor %}
         </div>
+
+        {% if is_paginated %}
+        <nav class="d-flex justify-content-center">
+            <ul class="pagination">
+                <li class="page-item {% if not page_obj.has_previous %}disabled{% endif %}">
+                    <a
+                        class="page-link"
+                        href="{% if page_obj.has_previous %}{{request.path}}?page={{page_obj.previous_page_number}}{% if request.GET.search %}&search={{request.GET.search}}{% endif %}{% endif %}"
+                        >&laquo;</a
+                    >
+                </li>
+                <li class="page-item {% if page_obj.number == 1 %}active{% endif %}">
+                    <a
+                        class="page-link"
+                        href="{{request.path}}?page=1{% if request.GET.search %}&search={{request.GET.search}}{% endif %}"
+                        >1</a
+                    >
+                </li>
+                {% if page_obj.number > 3 %}
+                {% if page_obj.number != 4 %}
+                <li class="page-item disabled"><a class="page-link">...</a></li>
+                {% endif %}
+                <li class="page-item">
+                    <a
+                        class="page-link"
+                        href="{{request.path}}?page={{page_obj.number|add:'-2'}}{% if request.GET.search %}&search={{request.GET.search}}{% endif %}"
+                        >{{page_obj.number|add:'-2'}}</a
+                    >
+                </li>
+                {% endif %} {% if page_obj.number > 2 %}
+                <li class="page-item">
+                    <a
+                        class="page-link"
+                        href="{{request.path}}?page={{page_obj.previous_page_number}}{% if request.GET.search %}&search={{request.GET.search}}{% endif %}"
+                        >{{page_obj.previous_page_number}}</a
+                    >
+                </li>
+                {% endif %} {% if page_obj.number != 1 and page_obj.number != page_obj.paginator.num_pages %}
+                <li class="page-item active"><a class="page-link" href="#">{{page_obj.number}}</a></li>
+                {% endif %} {% if page_obj.paginator.num_pages|add:"-1" > page_obj.number %}
+                <li class="page-item">
+                    <a
+                        class="page-link"
+                        href="{{request.path}}?page={{page_obj.next_page_number}}{% if request.GET.search %}&search={{request.GET.search}}{% endif %}"
+                        >{{page_obj.next_page_number}}</a
+                    >
+                </li>
+                {% endif %} {% if page_obj.paginator.num_pages|add:"-2" > page_obj.number %}
+                <li class="page-item">
+                    <a
+                        class="page-link"
+                        href="{{request.path}}?page={{page_obj.number|add:2}}{% if request.GET.search %}&search={{request.GET.search}}{% endif %}"
+                        >{{page_obj.number|add:2}}</a
+                    >
+                </li>
+                {% if page_obj.number|add:3 != page_obj.paginator.num_pages %}
+                <li class="page-item disabled"><a class="page-link">...</a></li>
+                {% endif %}
+                {% endif %}
+                <li class="page-item {% if page_obj.number == page_obj.paginator.num_pages %}active{% endif %}">
+                    <a
+                        class="page-link"
+                        href="{{request.path}}?page={{page_obj.paginator.num_pages}}{% if request.GET.search %}&search={{request.GET.search}}{% endif %}"
+                        >{{page_obj.paginator.num_pages}}</a
+                    >
+                </li>
+                <li class="page-item {% if not page_obj.has_next %}disabled{% endif %}">
+                    <a
+                        class="page-link"
+                        href="{% if page_obj.has_next %}{{request.path}}?page={{page_obj.next_page_number}}{% if request.GET.search %}&search={{request.GET.search}}{% endif %}{% endif %}"
+                        >&raquo;</a
+                    >
+                </li>
+            </ul>
+        </nav>
+        {% endif %}
     </body>
 </html>
