--- a/verifications/templates/verifications/verification_form.html
+++ b/verifications/templates/verifications/verification_form.html
@@ -1,16 +1,50 @@
-{% extends 'pages/index.html' %}
+{% extends "pages/index.html" %}
+{% load static %}
 {% load crispy_forms_tags %}
 
-{% block title %} Верифікація {% endblock %}
+{% block title %}Верифікація{% endblock %}
 
 {% block container %}
-	<h3>Подати заявку на верифікацію</h3>
 
-	<form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <button type="submit" class="btn btn-success w-100 mt-3">Відправити заявку</button>
-</form>
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert
+                {% if message.tags == 'error' %}alert-danger
+                {% elif message.tags == 'success' %}alert-success
+                {% elif message.tags == 'warning' %}alert-warning
+                {% elif message.tags == 'info' %}alert-info
+                {% else %}alert-primary
+                {% endif %} my-3 text-center">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
+
+    {% if is_form_shown %}
+        <h3>Подати заявку на верифікацію</h3>
+
+        <form method="post" enctype="multipart/form-data" class="mt-4">
+            {% csrf_token %}
+
+            {{ form|crispy }}
+
+            <hr>
+
+            <label class="form-label">Документи</label>
+            <input type="file"
+                   id="file-input"
+                   name="documents"
+                   multiple
+                   class="form-control">
+
+            <ul id="file-list" class="list-group mt-3"></ul>
+
+            <button type="submit" class="btn btn-success w-100 mt-4">
+                Відправити заявку
+            </button>
+        </form>
+    {% endif %}
+
+    <script src="{% static 'js/file_picker.js' %}"></script>
 
 {% endblock %}
-
