--- a/pages/templates/components/navbar.html
+++ b/pages/templates/components/navbar.html
@@ -4,8 +4,12 @@
 		<div class="d-flex justify-content-between " id="navbarSupportedContent">
 			<ul class="navbar-nav me-auto mb-2 mb-lg-0 gap-3">
 				<li class="nav-item">
-					<a class="nav-item btn btn-warning" aria-current="page" href="{% url "create_announcement" %}">Створити
-						оголошення</a>
+					<a class="nav-item btn btn-success" aria-current="page" href="{% url 'fundraisers:announcements' %}">Всі
+						збори</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-item btn btn-warning" aria-current="page" href="{% url 'fundraisers:create_announcement' %}">Створити
+						збір</a>
 				</li>
 				{% if user.is_authenticated %}
 					<li class="nav-item dropdown">
