--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,18 +1,14 @@
-{% load static %}
+{% extends 'pages/index.html' %}
 {% load crispy_forms_tags %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Profile</title>
-</head>
-<body>
-    <div>
-        <form method="post">
-            {% csrf_token %}
-            {{ form|crispy }}
-            <button type="submit">Submit</button>
-        </form>
-    </div>
-</body>
-</html>
+
+{% block title %}Profile{% endblock %}
+
+{% block container %}
+	<div>
+		<form method="post">
+			{% csrf_token %}
+			{{ form|crispy }}
+			<button type="submit">Submit</button>
+		</form>
+	</div>
+{% endblock %}
