--- a/fundraisers/templates/fundraisers/announcement.html
+++ b/fundraisers/templates/fundraisers/announcement.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <title>Charity Platform</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     </head>
     <body>
         <h3>Заголовок: {{announcement.title}}</h3>
@@ -15,7 +17,12 @@
         <h3>Фото відсутнє</h3>
         {% endif %}
         <h3>Операційний напрямок: {{announcement.operational_direction}}</h3>
-        <h3>Підрозділ: {{announcement.unit}}</h3>
+        <div class="border rounded">
+            <h3>Підрозділ:
+                <a href="{% url 'units:unit' announcement.unit.id %}">{{announcement.unit.name}}</a>
+            </h3>
+            <img class="w-25" src="{{announcement.unit.logo.url}}">
+        </div>
         <h3>Дата створення оголошення: {{announcement.date}}</h3>
     </body>
 </html>
